--- a/index.html
+++ b/index.html
@@ -85,7 +85,36 @@
 			<div class="container">
 				<div class="title">Our Expertise</div>
 				<div class="expertise__content"></div>
-				<div class="expertise__text"></div>
+				<div class="expertise__content-items">
+					<div class="expertise__content-item">Branding</div>
+					<div class="expertise__content-item">Design</div>
+					<div class="expertise__content-item">Development</div>
+				</div>
+
+				<div class="expertise__content-text">
+					<p>
+						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus
+						inventore magnam temporibus reprehenderit autem enim. Earum nobis
+						nihil, eius hic eum eos id ratione aut error optio. Voluptatibus,
+						dolorum reprehenderit!Est ut necessitatibus, cupiditate qui odit
+						dolores amet, numquam, omnis architecto consequuntur atque suscipit
+						quis? Id animi sunt impedit voluptas velit incidunt nostrum, nam,
+						laborum veritatis consequatur at modi tenetur?
+					</p>
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit
+						cumque ratione dolores modi quo dicta vero maiores aspernatur! Neque
+						rerum repudiandae aliquam perferendis, quidem eum impedit nobis
+						alias cupiditate voluptatibus.Assumenda officia omnis culpa labore
+						modi consequuntur ad dolores odit quia esse quae voluptas, explicabo
+						illum in aspernatur nobis possimus tempore placeat corrupti suscipit
+						aliquid repellendus, praesentium tenetur rem! Magni?
+					</p>
+				</div>
+			</div>
+
+			<div class="expertise__items">
+				<div class="expertise__item"></div>
 			</div>
 		</section>
 	</body>
