--- a/index.html
+++ b/index.html
@@ -114,7 +114,42 @@
 			</div>
 
 			<div class="expertise__items">
-				<div class="expertise__item"></div>
+				<div class="expertise__item">
+					<img class="expertise__img" src="" alt="" />
+					<div class="expertise__item-box">
+						<div class="expertise__item-title">Graphic Design</div>
+						<div class="expertise__item-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+							reprehenderit consequatur harum tempora ratione quia tenetur
+							assumenda sed placeat optio veritatis quo neque eos fugiat eum,
+							nobis in nulla. Nobis?Voluptatem numquam nihil harum molestiae
+						</div>
+					</div>
+				</div>
+				<div class="expertise__item">
+					<img class="expertise__img" src="" alt="" />
+					<div class="expertise__item-box">
+						<div class="expertise__item-title">Graphic Design</div>
+						<div class="expertise__item-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+							reprehenderit consequatur harum tempora ratione quia tenetur
+							assumenda sed placeat optio veritatis quo neque eos fugiat eum,
+							nobis in nulla. Nobis?Voluptatem numquam nihil harum molestiae
+						</div>
+					</div>
+				</div>
+				<div class="expertise__item">
+					<img class="expertise__img" src="" alt="" />
+					<div class="expertise__item-box">
+						<div class="expertise__item-title">Graphic Design</div>
+						<div class="expertise__item-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+							reprehenderit consequatur harum tempora ratione quia tenetur
+							assumenda sed placeat optio veritatis quo neque eos fugiat eum,
+							nobis in nulla. Nobis?Voluptatem numquam nihil harum molestiae
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 	</body>
