--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
 					</p>
 				</div>
 			</div>
-			[[[]]]
 			<div class="expertise__items">
 				<div class="expertise__item">
 					<img class="expertise__img" src="" alt="" />
@@ -138,19 +137,46 @@
 						</div>
 					</div>
 				</div>
-				<div class="expertise__item">
-					<img class="expertise__img" src="" alt="" />
-					<div class="expertise__item-box">
-						<div class="expertise__item-title">Graphic Design</div>
-						<div class="expertise__item-text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-							reprehenderit consequatur harum tempora ratione quia tenetur
-							assumenda sed placeat optio veritatis quo neque eos fugiat eum,
-							nobis in nulla. Nobis?Voluptatem numquam nihil harum molestiae
-						</div>
+				<div class="expertise__item expertise__item--shout">
+					<div class="expertise__item-title">Graphic Design</div>
+					<div class="expertise__item-text">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+						reprehenderit consequatur harum tempora ratione quia tenetur
+						assumenda sed placeat optio veritatis quo neque eos fugiat eum,
+						nobis in nulla. Nobis?Voluptatem numquam nihil harum molestiae
 					</div>
 				</div>
 			</div>
 		</section>
+		<section class="features">
+			<div class="container">
+				<div class="features__inner">
+					<div class="title features__title">Let s make magic</div>
+					<div class="features__text">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt
+							hic, tenetur, porro atque magnam explicabo nulla temporibus
+							repellat sunt, vel provident enim magni dolor repellendus
+							assumenda a aliquid quisquam fugit!Minus eligendi, consequuntur et
+							animi assumenda doloremque asperiores consequatur id omnis, error
+							in. Ducimus similique quam quisquam minima placeat, natus quas
+							mollitia iste ad, exercitationem, id necessitatibus ex harum
+							optio!
+						</p>
+						<p>
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+							Consectetur quia nostrum aspernatur reiciendis vel quisquam illum
+							veritatis? Impedit consectetur tempora facilis nam mollitia
+							veritatis eveniet obcaecati libero explicabo, iste modi.Iure ullam
+							officia minus illum, repellat, id, amet voluptate et ad aliquam
+							necessitatibus atque reprehenderit qui debitis. Voluptas,
+							consequatur, voluptatibus placeat molestias quae explicabo
+							inventore aut autem vero distinctio veritatis.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="portfolio"></section>
 	</body>
 </html>
