--- a/index.html
+++ b/index.html
@@ -177,6 +177,64 @@
 				</div>
 			</div>
 		</section>
-		<section class="portfolio"></section>
+		<section class="portfolio">
+			<div class="container">
+				<div class="portfolio__head">
+					<div class="title">Portfolio</div>
+					<div class="portfolio__buttons">
+						<button class="portfolio__btn">ALL</button>
+						<button class="portfolio__btn">BRANDING</button>
+						<button class="portfolio__btn">BRANDING</button>
+						<button class="portfolio__btn">PHOTOGRAPHY</button>
+						<button class="portfolio__btn">ILLUSTRATION</button>
+					</div>
+				</div>
+
+				<div class="portfolio__items">
+					<div class="portfolio__item-img">
+						<div class="portfolio__item-title">OCCA CUPIDATAT</div>
+						<div class="portfolio__item-descr">DESIGN</div>
+					</div>
+					<div class="portfolio__item-img">
+						<div class="portfolio__item-title">OCCA CUPIDATAT</div>
+						<div class="portfolio__item-descr">DESIGN</div>
+					</div>
+					<div class="portfolio__item-img">
+						<div class="portfolio__item-title">OCCA CUPIDATAT</div>
+						<div class="portfolio__item-descr">DESIGN</div>
+					</div>
+					<div class="portfolio__item-img">
+						<div class="portfolio__item-title">OCCA CUPIDATAT</div>
+						<div class="portfolio__item-descr">DESIGN</div>
+					</div>
+					<div class="portfolio__item-img">
+						<div class="portfolio__item-title">OCCA CUPIDATAT</div>
+						<div class="portfolio__item-descr">DESIGN</div>
+					</div>
+					<div class="portfolio__item-img">
+						<div class="portfolio__item-title">OCCA CUPIDATAT</div>
+						<div class="portfolio__item-descr">DESIGN</div>
+					</div>
+					<div class="portfolio__item-img">
+						<div class="portfolio__item-title">OCCA CUPIDATAT</div>
+						<div class="portfolio__item-descr">DESIGN</div>
+					</div>
+					<div class="portfolio__item-img">
+						<div class="portfolio__item-title">OCCA CUPIDATAT</div>
+						<div class="portfolio__item-descr">DESIGN</div>
+					</div>
+					<div class="portfolio__item-img">
+						<div class="portfolio__item-title">OCCA CUPIDATAT</div>
+						<div class="portfolio__item-descr">DESIGN</div>
+					</div>
+				</div>
+				<button class="portfolio__btn-all">VIEW MORE PROJECTS</button>
+			</div>
+		</section>
+		<section class="video">
+			<div class="video__quotes"></div>
+			<div class="video__quotes-author">Gilbert Hammond</div>
+			<video class="video__content" src=""></video>
+		</section>
 	</body>
 </html>
