--- a/index.html
+++ b/index.html
@@ -236,5 +236,27 @@
 			<div class="video__quotes-author">Gilbert Hammond</div>
 			<video class="video__content" src=""></video>
 		</section>
+		<section class="statistics">
+			<div class="container">
+				<div class="statistics__inner">
+					<div class="statistics__item">
+						<div class="statistics__item-num">305</div>
+						<div class="statistics__item-text">Web Design</div>
+					</div>
+					<div class="statistics__item">
+						<div class="statistics__item-num">220</div>
+						<div class="statistics__item-text">Logo Design</div>
+					</div>
+					<div class="statistics__item">
+						<div class="statistics__item-num">52</div>
+						<div class="statistics__item-text">Print Design</div>
+					</div>
+					<div class="statistics__item">
+						<div class="statistics__item-num">88</div>
+						<div class="statistics__item-text">Mobile App</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
