--- a/index.html
+++ b/index.html
@@ -258,5 +258,181 @@
 				</div>
 			</div>
 		</section>
+		<section class="slider">
+			<div class="slider__item">
+				<div class="slider__item-title">
+					Then they show that show to the people who make shows
+				</div>
+				<div class="slider__item-text">
+					<p>
+						<span
+							>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+							Accusamus voluptate asperiores repudiandae possimus, beatae
+							maiores qui id quos hic veniam. Dolorum sequi consequatur minima
+							est, quas tempore incidunt autem natus.</span
+						><span
+							>Voluptatum laborum fugiat repudiandae. Culpa sint reiciendis odit
+							atque quos, id quo ipsum. Veritatis necessitatibus et quas labore
+							eum atque eligendi repellendus nemo impedit similique, magni est
+							soluta. Sunt, corrupti.</span
+						>
+					</p>
+				</div>
+			</div>
+			<div class="slider__item">
+				<div class="slider__item-title">
+					Then they show that show to the people who make shows
+				</div>
+				<div class="slider__item-text">
+					<p>
+						<span
+							>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+							Accusamus voluptate asperiores repudiandae possimus, beatae
+							maiores qui id quos hic veniam. Dolorum sequi consequatur minima
+							est, quas tempore incidunt autem natus.</span
+						><span
+							>Voluptatum laborum fugiat repudiandae. Culpa sint reiciendis odit
+							atque quos, id quo ipsum. Veritatis necessitatibus et quas labore
+							eum atque eligendi repellendus nemo impedit similique, magni est
+							soluta. Sunt, corrupti.</span
+						>
+					</p>
+				</div>
+			</div>
+			<div class="slider__item">
+				<div class="slider__item-title">
+					Then they show that show to the people who make shows
+				</div>
+				<div class="slider__item-text">
+					<p>
+						<span
+							>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+							Accusamus voluptate asperiores repudiandae possimus, beatae
+							maiores qui id quos hic veniam. Dolorum sequi consequatur minima
+							est, quas tempore incidunt autem natus.</span
+						><span
+							>Voluptatum laborum fugiat repudiandae. Culpa sint reiciendis odit
+							atque quos, id quo ipsum. Veritatis necessitatibus et quas labore
+							eum atque eligendi repellendus nemo impedit similique, magni est
+							soluta. Sunt, corrupti.</span
+						>
+					</p>
+				</div>
+			</div>
+		</section>
+		<section class="team">
+			<div class="container">
+				<div class="title">Our Team</div>
+				<div class="team__items">
+					<div class="team__item">
+						<img class="team__item-img" src="" alt="" />
+						<div class="team__item-name">Bernard Sparks</div>
+						<div class="team__item-position">Ceo</div>
+					</div>
+					<div class="team__item">
+						<img class="team__item-img" src="" alt="" />
+						<div class="team__item-name">Minerva Benson</div>
+						<div class="team__item-position">Co-founder</div>
+					</div>
+					<div class="team__item">
+						<img class="team__item-img" src="" alt="" />
+						<div class="team__item-name">Jared Olson</div>
+						<div class="team__item-position">Sales</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="pricing">
+			<div class="title">Pricing Plans</div>
+			<div class="pricing__items">
+				<div class="pricing__item">
+					<div class="pricing__item-name">Basic</div>
+					<div class="pricing__item-rate">25 <span>/mo</span></div>
+					<ul class="pricing__list">
+						<li class="pricing__list-item">1 Logo-Design</li>
+						<li class="pricing__list-item">1 Website Design</li>
+						<li class="pricing__list-item">1 Domain Free</li>
+						<li class="pricing__list-item">3 Month License</li>
+						<li class="pricing__list-item">1 GB Storge</li>
+					</ul>
+					<button class="pricing__button">CHOSE PLAN</button>
+				</div>
+				<div class="pricing__item">
+					<div class="pricing__item-name">Basic</div>
+					<div class="pricing__item-rate">25 <span>/mo</span></div>
+					<ul class="pricing__list">
+						<li class="pricing__list-item">1 Logo-Design</li>
+						<li class="pricing__list-item">1 Website Design</li>
+						<li class="pricing__list-item">1 Domain Free</li>
+						<li class="pricing__list-item">3 Month License</li>
+						<li class="pricing__list-item">1 GB Storge</li>
+					</ul>
+					<button class="pricing__button">CHOSE PLAN</button>
+				</div>
+				<div class="pricing__item">
+					<div class="pricing__item-name">Basic</div>
+					<div class="pricing__item-rate">25 <span>/mo</span></div>
+					<ul class="pricing__list">
+						<li class="pricing__list-item">1 Logo-Design</li>
+						<li class="pricing__list-item">1 Website Design</li>
+						<li class="pricing__list-item">1 Domain Free</li>
+						<li class="pricing__list-item">3 Month License</li>
+						<li class="pricing__list-item">1 GB Storge</li>
+					</ul>
+					<button class="pricing__button">CHOSE PLAN</button>
+				</div>
+			</div>
+		</section>
+		<section class="contact">
+			<div class="container">
+				<div class="contact__content">
+					<form class="contact__form" action="">
+						<input
+							class="contact__form-input"
+							type="text"
+							placeholder="YOUR NAME"
+						/>
+						<input
+							class="contact__form-input"
+							type="text"
+							placeholder="VALID EMAIL"
+						/>
+						<textarea
+							class="contact__form-textarea"
+							name=""
+							placeholder="YOUR MESSAGE"
+						></textarea>
+						<button class="contact__form-btn">SEND MESSAGE</button>
+					</form>
+				</div>
+			</div>
+			<div class="contact__map"></div>
+		</section>
+		<footer class="footer">
+			<div class="footer__content"></div>
+			<div class="container">
+				<div class="logo logo--line">
+					<a class="logo__link" href="#">
+						<img class="logo__img" src="#" alt="" />
+					</a>
+				</div>
+				<div class="footer__social">
+					<a class="footer__social-link" href="#">Facebook</a>
+					<a class="footer__social-link" href="#">Twitter</a>
+					<a class="footer__social-link" href="#">Google</a>
+					<a class="footer__social-link" href="#">Behance</a>
+					<a class="footer__social-link" href="#">Dribble</a>
+					<a class="footer__social-link" href="#">Instagramm</a>
+				</div>
+				<div class="footer__adress">Mese selimovica 52, Banja Luka - BiH</div>
+				<a class="footer__phone" href="tel:(00387)65252222"
+					>(00387) 65 252 222</a
+				>
+				<a class="footer__email" href="mailto:info@mail.com">info@mail.com</a>
+				<button class="footer-to__top-btn"></button>
+			</div>
+
+			<div class="footer__copy">@2015 Oxygen Theme</div>
+		</footer>
 	</body>
 </html>
